feat: update test scripts and add user routes tests
